--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,13 @@
-# Uncomment the following to prevent the httpoxy vulnerability
-# See: https://httpoxy.org/
-#<IfModule mod_headers.c>
-#    RequestHeader unset Proxy
-#</IfModule>
 
 <IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteRule    ^(\.well-known/.*)$ $1 [L]
-    RewriteRule    ^$    webroot/    [L]
-    RewriteRule    (.*) webroot/$1    [L]
+   RewriteEngine On
+
+    Header set Access-Control-Allow-Credentials true
+  Header  set Access-Control-Allow-Origin "*"
+Header always set Access-Control-Allow-Methods "POST, GET, DELETE, PUT"
+Header always set Access-Control-Max-Age "1000"
+Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+
+   RewriteCond %{REQUEST_FILENAME} !-f
+   RewriteRule ^ index.php [L]
 </IfModule>
