Fixed HTaccess file

--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
 
     Header set Access-Control-Allow-Credentials true
   Header  set Access-Control-Allow-Origin "*"
-Header always set Access-Control-Allow-Methods "POST, GET, DELETE, PUT"
+Header always set Access-Control-Allow-Methods "*"
 Header always set Access-Control-Max-Age "1000"
 Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
 
